# tuw_fake_localization

./: .gitignore  CMakeLists.txt  README.md  Readme.md  package.xml
docs/: diagram.drawio
include/tuw_fake_localization/: fake_localization.hpp
src/: fake_localization.cpp  standalone_fake_localization.cpp
